# servermanager

./: .env.example  .gitignore  AGENTS.md  README.md  index.html  install.bat  package-lock.json  package.json  run.bat  vite.config.ts
docs/: SPEC.md  infisical.md
docs/superpowers/specs/: 2026-07-21-approval-ini-docs-design.md  2026-07-21-log-collect-filter-design.md  2026-07-21-sqlbind-log-import-design.md
env/: prod-api.env.example
reference/: README.md
scripts/: convert-approval-ini-xlsx.py  tauri-dev.ps1
src/: App.css  App.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: env_secrets.rs  infisical.rs  lib.rs  local_fs.rs  main.rs  models.rs  secret_crypto.rs  sftp.rs  ssh.rs  store.rs
src/components/: ApprovalIniDocsPanel.tsx  ApprovalToolPanel.tsx  DirTree.tsx  FavoritesPanel.tsx  FileTable.tsx  FilesPane.tsx  LogCollectPanel.tsx  PathFavoritesBar.tsx  SecretPromptModal.tsx  ServerModal.tsx  SettingsModal.tsx  SiteExplorer.tsx  SqlBindPanel.tsx  TerminalPane.tsx  TextViewerModal.tsx  fileManagerShared.ts
src/lib/: approvalIniDocs.ts  sancboxPath.ts  sqlBinder.ts
