[package]
name = "servermanager"
version = "0.1.0"
description = "SSH Server Manager with .env credentials (Infisical optional)"
authors = ["you"]
edition = "2021"

[lib]
name = "servermanager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "fs", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
russh = "0.52"
russh-sftp = "2.0"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "2"
keyring = { version = "3", features = ["windows-native", "apple-native", "linux-native"] }
base64 = "0.22"
aes-gcm = "0.10"
futures = "0.3"
async-trait = "0.1"
dirs = "6"
log = "0.4"
env_logger = "0.11"
tauri-plugin-fs = "2"

